--- a/views/index.haml
+++ b/views/index.haml
@@ -3,5 +3,8 @@
   %head
     %title
       bubonem
+    %script{ src: 'bubonem.js' }
   %body
-    yolo
+    .edsbergsskolan
+    .axroad
+    .weather_forecast
