--- a/views/index.haml
+++ b/views/index.haml
@@ -3,6 +3,7 @@
   %head
     %title
       bubonem
+    %script{ src: 'https://ajax.googleapis.com/ajax/libs/jquery/3.1.0/jquery.min.js' }
     %script{ src: 'bubonem.js' }
   %body
     .edsbergsskolan
