--- a/views/index.haml
+++ b/views/index.haml
@@ -3,9 +3,10 @@
   %head
     %title
       bubonem
+    %link{ href: 'bubonem.css', rel: 'stylesheet' }
     %script{ src: 'https://ajax.googleapis.com/ajax/libs/jquery/3.1.0/jquery.min.js' }
     %script{ src: 'bubonem.js' }
   %body
-    .edsbergsskolan
-    .axroad
+    .edsbergsskolan.quarter
+    .axroad.quarter
     .weather_forecast
