--- a/views/index.haml
+++ b/views/index.haml
@@ -4,9 +4,14 @@
     %title
       bubonem
     %link{ href: 'bubonem.css', rel: 'stylesheet' }
+    %link{ rel: 'stylesheet', type: 'text/css', href: 'https://fonts.googleapis.com/css?family=Fira Mono' }
+
     %script{ src: 'https://ajax.googleapis.com/ajax/libs/jquery/3.1.0/jquery.min.js' }
     %script{ src: 'bubonem.js' }
   %body
-    .edsbergsskolan.quarter
-    .axroad.quarter
-    .weather_forecast
+    .all
+      .left
+        .edsbergsskolan.quarter
+        .axroad.quarter
+      .right
+        .weather_forecast
