--- a/views/forecast.haml
+++ b/views/forecast.haml
@@ -1,9 +1,9 @@
 %table
   - data.each do |one_forecast|
     %tr
-      %td
+      %td.time
         = "#{one_forecast.time.hour}:00"
-      %td
+      %td.celsius
         = "#{one_forecast.celsius} °C"
-      %td
+      %td.symbol
         %img{ src: "http://www.smhi.se/wpt-a/startpage/images/WPT-icons/weathersymbols/80x60/day/#{one_forecast.symbol}.png" }
