--- a/views/index.haml
+++ b/views/index.haml
@@ -11,7 +11,7 @@
   %body
     .all
       .left
-        .edsbergsskolan.quarter
-        .axroad.quarter
+        %section.edsbergsskolan
+        %section.axroad
       .right
-        .weather_forecast
+        %section.weather_forecast
