--- a/views/index.haml
+++ b/views/index.haml
@@ -21,3 +21,5 @@
           %section.axroad
         .column
           %section.weather_forecast
+        .column
+          %iframe{ src: 'https://trafiken.nu/stockholm/#fullscreen', width: 1000, height: 1000 }
