--- a/views/stop_information.haml
+++ b/views/stop_information.haml
@@ -7,7 +7,7 @@
 %hr
 .departures
   %table
-    - departures.each do |one_departure|
+    - departures[0...10].each do |one_departure|
       %tr.one_departure
         %td.arrival_time= one_departure['DisplayTime']
         %td.line= one_departure['LineNumber']
