--- a/views/index.haml
+++ b/views/index.haml
@@ -12,7 +12,7 @@
     .all
       %header
         %span.current_time{ 'data-timeout': 1 }
-        %span.sun{ 'data-timeout': 60 * 24 }
+        %span.widget#sun{ 'data-timeout': 60 * 24, 'data-url':'/sun' }
       .main
         .column
           %section.edsbergsskolan{ 'data-timeout': 1 }
