--- a/views/index.haml
+++ b/views/index.haml
@@ -20,4 +20,4 @@
         .column
           %section.weather_forecast{ 'data-timeout': 60 }
         .column
-          %iframe{ src: 'https://trafiken.nu/stockholm/#fullscreen', width: 850, height: 850 }
+          %iframe.traffic_map{ src: 'https://trafiken.nu/stockholm/#fullscreen', width: 850, height: 850 }
