--- a/views/index.haml
+++ b/views/index.haml
@@ -11,13 +11,13 @@
   %body
     .all
       %header
-        %span.current_time{ 'data-timeout': 1 }
-        %span.widget#sun{ 'data-timeout': 60 * 24, 'data-url':'/sun' }
+        %span.widget{ 'data-timeout': 1, 'data-url': '/current_time' }
+        %span.widget#sun{ 'data-timeout': 60 * 24, 'data-url': '/sun' }
       .main
         .column
-          %section.edsbergsskolan{ 'data-timeout': 1 }
-          %section.axroad{ 'data-timeout': 1 }
+          %section.widget{ 'data-timeout': 1, 'data-url': '/edsbergsskolan' }
+          %section.widget{ 'data-timeout': 1, 'data-url': '/axroad' }
         .column
-          %section.weather_forecast{ 'data-timeout': 60 }
+          %section.widget#weather_forecast{ 'data-timeout': 60, 'data-url': '/weather_forecast' }
         .column
-          %iframe.traffic_map{ src: 'https://trafiken.nu/stockholm/#fullscreen', width: 850, height: 850 }
+          %iframe#traffic_map{ src: 'https://trafiken.nu/stockholm/#fullscreen', width: 850, height: 850 }
