generic stop information

--- a/views/index.haml
+++ b/views/index.haml
@@ -15,8 +15,8 @@
         %span.widget#sun{ 'data-timeout': 60 * 24, 'data-url': '/sun' }
       .main
         .column
-          %section.widget{ 'data-timeout': 1, 'data-url': '/edsbergsskolan' }
-          %section.widget{ 'data-timeout': 1, 'data-url': '/axroad' }
+          %section.widget{ 'data-timeout': 1, 'data-url': '/bus_stop/5518' }
+          %section.widget{ 'data-timeout': 1, 'data-url': '/bus_stop/5515' }
         .column
           %section.widget#weather_forecast{ 'data-timeout': 60, 'data-url': '/weather_forecast' }
         .column
