--- a/views/index.haml
+++ b/views/index.haml
@@ -15,8 +15,8 @@
         %span.widget#sun{ 'data-timeout': 60 * 24, 'data-url': '/sun' }
       .main
         .column
-          %section.widget{ 'data-timeout': 1, 'data-url': '/bus_stop/5518' }
-          %section.widget{ 'data-timeout': 1, 'data-url': '/bus_stop/5515' }
+          - bus_stops.each do |one_stop|
+            %section.widget{ 'data-timeout': 1, 'data-url': "/bus_stop/#{one_stop}" }
         .column
           %section.widget#weather_forecast{ 'data-timeout': 60, 'data-url': '/weather_forecast' }
         .column
