adds lat and lon as parameters

--- a/views/index.haml
+++ b/views/index.haml
@@ -18,6 +18,6 @@
           - bus_stops.each do |one_stop|
             %section.widget{ 'data-timeout': 1, 'data-url': "/bus_stop/#{one_stop}" }
         .column
-          %section.widget#weather_forecast{ 'data-timeout': 60, 'data-url': '/weather_forecast' }
+          %section.widget#weather_forecast{ 'data-timeout': 60, 'data-url': "/weather_forecast?lat=#{lat}&lon=#{lon}" }
         .column
           %iframe#traffic_map{ src: 'https://trafiken.nu/stockholm/#fullscreen', width: 850, height: 850 }
