map w & can be changed with request parameters

--- a/views/index.haml
+++ b/views/index.haml
@@ -20,4 +20,4 @@
         .column
           %section.widget#weather_forecast{ 'data-timeout': 60, 'data-url': "/weather_forecast?lat=#{lat}&lon=#{lon}" }
         .column
-          %iframe#traffic_map{ src: 'https://trafiken.nu/stockholm/#fullscreen', width: 850, height: 850 }
+          %iframe#traffic_map{ src: 'https://trafiken.nu/stockholm/#fullscreen', width: mapw, height: maph }
