start page embryo

--- a/views/index.haml
+++ b/views/index.haml
@@ -1,1 +1,20 @@
 %h1= 'bubonem'
+
+%p
+
+  budonem är en dashboard för folk som bor i Stockholmsområdet. Den visar:
+
+  %ul
+    %li
+      hållplatsinformation från SL
+    %li
+      väder från SMHI
+    %li
+      solens upp och nedgång
+    %li
+      trafikkarta från trafiken.nu
+
+  Dashboarden går att konfigurera efter de behov man har.
+  %a{ href: '/dash' }
+    Ursprungsutförandet 
+  funkar fint om man bor i Landnora, Sollentuna men annars kan man skapa sin egen dashboard länk här nedan.
