better looking link

--- a/views/index.haml
+++ b/views/index.haml
@@ -15,6 +15,5 @@
       trafikkarta från trafiken.nu
 
   Dashboarden går att konfigurera efter de behov man har.
-  %a{ href: '/dash' }
-    Ursprungsutförandet 
+  %a{ href: '/dash' }= "Ursprungsutförandet"
   funkar fint om man bor i Landnora, Sollentuna men annars kan man skapa sin egen dashboard länk här nedan.
