--- a/views/dash.haml
+++ b/views/dash.haml
@@ -4,8 +4,8 @@
     %span.widget#sun{ 'data-timeout': 60 * 24, 'data-url': '/sun' }
   .main
     .column
-      - bus_stops.each do |one_stop|
-        %section.widget{ 'data-timeout': 1, 'data-url': "/bus_stop/#{one_stop}" }
+      - stops.each do |one_stop|
+        %section.widget{ 'data-timeout': 1, 'data-url': "/stop/#{one_stop}" }
     .column
       %section.widget#weather_forecast{ 'data-timeout': 60, 'data-url': "/weather_forecast?lat=#{lat}&lon=#{lon}" }
     .column
