--- a/views/stop_information.haml
+++ b/views/stop_information.haml
@@ -1,5 +1,6 @@
 - departures = data["Departures"]
 - stop_name = data["Title"]
+- stop_name = departures.first['StopAreaName'] if stop_name == "mot:" 
 - time = data["CurrentServerTime"]
 
 .stop_header
