--- a/views/index.haml
+++ b/views/index.haml
@@ -1,19 +1,20 @@
-%h1= 'bubonem'
+.front
+  %h1= 'bubonem'
 
-%p
+  %p.about
 
-  budonem är en dashboard för folk som bor i Stockholmsområdet. Den visar:
+    budonem är en dashboard för folk som bor i Stockholmsområdet. Den visar:
 
-  %ul
-    %li
-      hållplatsinformation från SL
-    %li
-      väder från SMHI
-    %li
-      solens upp och nedgång
-    %li
-      trafikkarta från trafiken.nu
+    %ul
+      %li
+        hållplatsinformation från SL
+      %li
+        väder från SMHI
+      %li
+        solens upp och nedgång
+      %li
+        trafikkarta från trafiken.nu
 
-  Dashboarden går att konfigurera efter de behov man har.
-  %a{ href: '/dash' }= "Ursprungsutförandet"
-  funkar fint om man bor i Landnora, Sollentuna men annars kan man skapa sin egen dashboard länk här nedan.
+    Dashboarden går att konfigurera efter de behov man har.
+    %a{ href: '/dash' }= "Ursprungsutförandet"
+    funkar fint om man bor i Landsnora, Sollentuna men annars kan man skapa sin egen dashboardlänk här nedan.
