--- a/views/layout.haml
+++ b/views/layout.haml
@@ -8,5 +8,6 @@
 
     %script{ src: 'https://ajax.googleapis.com/ajax/libs/jquery/3.1.0/jquery.min.js' }
     %script{ src: 'bubonem.js' }
+    %script{ src: 'add-stop.js' }
   %body
     = yield
