--- a/views/index.haml
+++ b/views/index.haml
@@ -36,6 +36,7 @@
       Lägg till hållplats
 
     .stop-picker
+      %i{ class: 'fa fa-times close', "aria-hidden": 'true' }
       %h3
         Välj hållplats
       %input{ type: "text", placeholder: "Hållplatsnamn" }
