--- a/views/layout.haml
+++ b/views/layout.haml
@@ -9,5 +9,7 @@
     %script{ src: 'https://ajax.googleapis.com/ajax/libs/jquery/3.1.0/jquery.min.js' }
     %script{ src: 'bubonem.js' }
     %script{ src: 'add-stop.js' }
+      
+    %script{ src: 'https://use.fontawesome.com/c8fc92bdfd.js' }
   %body
     = yield
