--- a/views/index.haml
+++ b/views/index.haml
@@ -40,3 +40,15 @@
       %h3
         Välj hållplats
       %input{ type: "text", placeholder: "Hållplatsnamn" }
+
+      
+  %p.browser-support
+    %h2
+      Webbläsarstöd
+
+    Bubonem använder en skojig CSS-grej som heter
+    %a{ href: 'https://developer.mozilla.org/en-US/docs/Web/CSS/display' }= "display:flex"
+    = '.'
+    Den är ganska ny och kräver en modern webbläsare.
+    Mer specifikt så är det (som vanligt) Internet Explorer som är lite efter. Här krävs version 11 eller senare.
+    Alla hyfsat nya versiona av andra webbläsare ska fungera fint. 
