station list returns markup

--- a/views/index.haml
+++ b/views/index.haml
@@ -39,6 +39,7 @@
       %h3
         Välj hållplats
       %input{ type: "text", placeholder: "Hållplatsnamn", class: "stop-search" }
+      #stop-list
 
 
     .map-size-selctor
