can select a stop from the list

--- a/views/index.haml
+++ b/views/index.haml
@@ -34,6 +34,8 @@
       %button.add-stop
         Lägg till hållplats
 
+      #selected-stops-list
+
     .stop-picker
       %i{ class: 'fa fa-times close', "aria-hidden": 'true' }
       %h3
