updates links when selecting stops

--- a/views/index.haml
+++ b/views/index.haml
@@ -55,7 +55,7 @@
     .your-link
       %h3
         4. Prova att det blev bra
-      %a{ href: "/dash" }= "/dash"
+      %a{ class: "my-link", href: "/dash" }= "/dash"
 
     
       
