--- a/views/layout.haml
+++ b/views/layout.haml
@@ -8,7 +8,10 @@
 
     %script{ src: 'https://ajax.googleapis.com/ajax/libs/jquery/3.1.0/jquery.min.js' }
     %script{ src: 'bubonem.js' }
+
+    -# TODO : only load these for the front page
     %script{ src: 'add-stop.js' }
+    %script{ src: 'link-calculator.js' }
       
     %script{ src: 'https://use.fontawesome.com/c8fc92bdfd.js' }
   %body
