documenting and restructuring

--- a/views/dash.haml
+++ b/views/dash.haml
@@ -1,3 +1,6 @@
+-# this template is a bunch of placeholders for javascript to put content in - se bubonem.js for more...
+-# the attibute data-timeout if the number of minutes to wait before updating the view
+-# the attribute data-url is the endpoint to call to get data to this view.
 .all
   %header
     %span.widget{ 'data-timeout': 1, 'data-url': '/current_time' }
