--- a/views/index.haml
+++ b/views/index.haml
@@ -68,4 +68,4 @@
     = '.'
     Den är ganska ny och kräver en modern webbläsare.
     Mer specifikt så är det (som vanligt) Internet Explorer som är lite efter. Här krävs version 11 eller senare.
-    Alla hyfsat nya versiona av andra webbläsare ska fungera fint. 
+    Alla hyfsat nya versioner av andra webbläsare ska fungera fint. 
