--- a/public/bubonem.css
+++ b/public/bubonem.css
@@ -88,3 +88,12 @@ td {
     list-style: none;
 }
 
+.map-size-selector input {
+    height: 30px;
+    border-radius: 10px;
+    padding: 5px;
+}
+
+.map-size-selector div {
+    margin-bottom: 20px;
+}
