--- a/views/index.haml
+++ b/views/index.haml
@@ -48,7 +48,10 @@
         2. Ändra koordinater för vädret
 
       %p
-        Vädret är inställd på koordinaterna N 59.29 E 18.11 vilket är i sydöstra Stockholm.
+        Vädret är inställd på koordinaterna
+        %a{ href: 'https://www.openstreetmap.org/#map=14/59.2900/18.1100&layers=T' }
+          N 59.29 E 18.11
+        vilket är i sydöstra Stockholm.
         Antagligtvis duger den väderprognosen ganska bra för hela Stockholm. Men vill du ha något annat
         så kan du fylla i det här.
 
