--- a/views/stop_information.haml
+++ b/views/stop_information.haml
@@ -1,10 +1,10 @@
 .stop_header
-  %span.stop_name= stop_name
+  %span.stop_name= departures[0]['stopAreaName']
 %hr
 .departures
   %table
-    - departures[0...7].each do |one_departure|
+    - departures[0...17].each do |one_departure|
       %tr.one_departure
-        %td.arrival_time= one_departure['DisplayTime']
-        %td.line= one_departure['LineNumber']
-        %td.destination= one_departure['Destination']      
+        %td.arrival_time= one_departure['time']['displayTime']
+        %td.line= one_departure['transport']['line']
+        %td.destination= one_departure['destination']      
