--- a/views/layout.haml
+++ b/views/layout.haml
@@ -4,6 +4,7 @@
     %title
       bubonem
     %link{ href: 'bubonem.css', rel: 'stylesheet' }
+    %link{ href: 'classic.css', rel: 'stylesheet' }
     %link{ rel: 'stylesheet', type: 'text/css', href: 'https://fonts.googleapis.com/css?family=Fira Mono' }
 
     %script{ src: 'bubonem.js' }
