--- a/views/layout.haml
+++ b/views/layout.haml
@@ -6,6 +6,7 @@
     %link{ href: 'bubonem.css', rel: 'stylesheet' }
     %link{ href: "ornaments/#{ornament}.css", rel: 'stylesheet' }
     %link{ rel: 'stylesheet', type: 'text/css', href: 'https://fonts.googleapis.com/css?family=Fira Mono' }
+    %link{ rel: 'stylesheet', type: 'text/css', href: 'https://fonts.googleapis.com/css?family=Syne Mono' }
 
     %script{ src: 'bubonem.js' }
 
