uses the proper API for SL station search
Uses dotenv for api keys so those will need to be added to the server.

Left to do:
- departures
- it is a bit slower so a longer time between calls when typing would be good
- document API key usage in readme

one half of #38

--- a/views/station_list_fragment.haml
+++ b/views/station_list_fragment.haml
@@ -1,6 +1,6 @@
 %ul
   - station_list.each do |one_station|
     %li
-      %a.one-stop-to-select{ "data-stop-id": one_station["siteId"], title: "Klicka för att välja" }
-        = one_station["name"]
+      %a.one-stop-to-select{ "data-stop-id": one_station["SiteId"], title: "Klicka för att välja" }
+        = one_station["Name"]
   
