--- a/views/layout.haml
+++ b/views/layout.haml
@@ -15,5 +15,6 @@
       %script{ src: "#{script}.js" }
       
     %script{ src: 'https://use.fontawesome.com/c8fc92bdfd.js' }
+    %script( src="https://cdn.usefathom.com/script.js" data-site="HSYFHURN" defer)
   %body
     = yield
