line numbers are nice

--- a/views/stop_information.haml
+++ b/views/stop_information.haml
@@ -5,5 +5,5 @@
     - departures[0...17].each do |one_departure|
       %tr.one_departure
         %td.arrival_time= one_departure['display']
-        %td.line= one_departure['desgination']
+        %td.line= one_departure['line']['designation']
         %td.destination= one_departure['destination']
